1.6 (201?-??-??)
  * New 'power.roc.test' function for sample size and power computations
  * New 'cov' and 'var' functions supports new "obuchowski" method
  * New 'ci.coords' function to compute CI of arbitrary coords
  * 'coords' accepts new 'ret' value "1-accuracy"
  * Faster algorithm to compute sensitivities and specificites with more than 1000 samples. Slightly slower with smaller samples
  * 'are.paired' now also checks for identical 'levels'
  * Fixed a warning generated in the examples
  * Fixed several bugs related with 'smooth.roc' curves
  * Additional input data sanity checks
  * Now requires R >= 2.13 (in fact, since 1.5.1, thanks Emmanuel Curis for the report)
  * Progress bars now defaults to text on Macs where 'tcltk' seems broken (thanks Gerard Smits for the report)

1.5.4 (2012-08-31)
  * Running less smooth.roc examples with logcondens because they take too much time (requested by Uwe Ligges)

1.5.3 (2012-08-31)
  * AUC specification was lost when roc.test, cov or var was passed an 'auc' object.
  * Correct computation of "accuracy" in 'coords' (thanks to Kosuke Yoshihara for the report)

1.5.1 (2012-03-09)
  * Faster loading of the package (thanks to Prof Brian Ripley and Glenn Lawyer for the report)

1.5 (2011-12-11)
  * New 'cov' and 'var' functions
  * 'coords' accepts new 'ret' values: "accuracy", "tn", "tp", "fn", "fp", "npv", "ppv", "1-specificity", "1-sensitivity", "1-npv", "1-ppv", "npe" and "ppe"
  * New 'legacy.axes' argument to 'plot' 1-specificity rather than specificity
  * New 'axes' argument to turn off the plotting of the axis
  * New 'logcondens' and 'logcondens.smooth' (Univariate Log-Concave Density Estimation) smoothing methods
  * New function 'has.partial.auc' to determine if an AUC is full or partial
  * New argument 'drop' for 'coords'
  * 'auc' and 'multiclass.auc' objects now also have secondary class 'numeric'
  * Updated load call
  * Delong's CI reversed in ROC curves with direction=">"