@@ -4,6 +4,7 @@
   * New 'ci.coords' function to compute CI of arbitrary coords
   * 'coords' accepts new 'ret' value "1-accuracy"
   * Faster algorithm to compute sensitivities and specificites with more than 1000 samples. Slightly slower with smaller samples
+  * Faster algorithm for DeLong 'roc.test', 'ci', 'var' and 'cov' function (thanks Kazuki Yoshida).
   * 'are.paired' now also checks for identical 'levels'
   * Fixed a warning generated in the examples
   * Fixed several bugs related with 'smooth.roc' curves
